--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "node index.js",
     "test": "SET NODE_ENV=test && mocha --timeout 10000 --colors ./repositories/**/*.test.js ./use_cases/**/*.test.js ./interfaces/controllers/**/*.test.js",
     "test_pooler_last_data": "mocha --timeout 10000 --colors ./pooler/v2/entity/last_data/index.test.js",
-    "test_pooler_issue": "mocha --timeout 10000 --colors ./pooler/v2/entity/issue/index.test.js"
+    "test_pooler_issue": "mocha --timeout 10000 --colors ./pooler/v2/entity/issue/index.test.js",
+    "test_pooler_device": "mocha --timeout 10000 --colors ./pooler/v2/entity/device/index.test.js"
   },
   "apidoc": {
     "header": {
