--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "require-directory": "^2.1.1",
     "sequelize": "^5.22.5",
     "sha1": "^1.1.1",
+    "socket.io": "^4.7.4",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.2",
     "table": "^6.8.0",
